# mysql-event-stream

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.ja.md  README.md  README_ja.md  codecov.yml
.github/scripts/: build-static-deps.sh  check-readme-quickstarts.py
.github/workflows/: ci.yml  develop-ci.yml  e2e.yml  publish.yml  safety-suite.yml
bindings/node/: .gitignore  .ncurc.yml  .npmignore  CMakeLists.txt  README.md  README.npm.md  biome.json  package.json  tsconfig.json
bindings/node/e2e/: tsconfig.json  vitest.config.ts
bindings/node/e2e/docker/: docker-compose.mariadb.yml  docker-compose.yml
bindings/node/e2e/docker/mariadb-init/: 01-init.sql
bindings/node/e2e/docker/mysql-init/: 01-init.sql
bindings/node/e2e/lib/: mysql-client.ts  streaming-collector.ts  wait.ts
bindings/node/e2e/tests/: cdc-stream.e2e.test.ts  delete.e2e.test.ts  insert.e2e.test.ts  streaming.e2e.test.ts  types.e2e.test.ts  update.e2e.test.ts
bindings/node/examples/: cdc-streaming.ts  cdc-watcher.ts  search-index-sync.ts
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64/: package.json
bindings/node/npm/linux-x64/: package.json
bindings/node/src/: client.ts  engine.ts  index.ts  logging.ts  native.ts  stream.ts  types.ts
bindings/node/src/addon/: addon.cpp  addon_constants.h  client_wrap.cpp  client_wrap.h  config_parser.h  engine_wrap.cpp  engine_wrap.h  log_callback.cpp  log_callback.h  mes_error_util.h
bindings/node/tests/: client.test.ts  engine.test.ts  helpers.ts  logging.test.ts  native-packages.test.ts  native.test.ts  stream.test.ts
bindings/python/: .coverage  .gitignore  README.md  build_native.sh  build_wheel.sh  hatch_build.py  pyproject.toml
bindings/python/e2e/: conftest.py
bindings/python/e2e/lib/: mysql_client.py  streaming_collector.py  wait.py
bindings/python/e2e/tests/: test_cdc_stream.py  test_delete.py  test_insert.py  test_streaming.py  test_types.py  test_update.py
bindings/python/examples/: cache_invalidation.py  cdc_streaming.py  cdc_watcher.py
bindings/python/src/mysql_event_stream/: __init__.py  _ffi.py  client.py  engine.py  logging.py  stream.py  types.py
bindings/python/tests/: conftest.py  helpers.py  test_client.py  test_engine.py  test_exports.py  test_logging.py  test_stream.py  test_types.py
core/: CMakeLists.txt
core/include/: mes.h
core/src/: binary_util.cpp  binary_util.h  capi.cpp  cdc_engine.cpp  cdc_engine.h  crc32.h  event_header.cpp  event_header.h  logger.cpp  logger.h  mariadb_event_parser.cpp  mariadb_event_parser.h  mariadb_gtid.cpp  mariadb_gtid.h  rotate_event.cpp  rotate_event.h  row_decoder.cpp  row_decoder.h  server_flavor.h  state_machine.cpp  state_machine.h  table_map.cpp  table_map.h  types.h
core/src/client/: binlog_client.cpp  binlog_client.h  capi_client.cpp  connection_validator.cpp  connection_validator.h  event_queue.cpp  event_queue.h  gtid_encoder.cpp  gtid_encoder.h  metadata_fetcher.cpp  metadata_fetcher.h  transaction_gtid_tracker.cpp  transaction_gtid_tracker.h
core/src/protocol/: mysql_auth.cpp  mysql_auth.h  mysql_binlog_stream.cpp  mysql_binlog_stream.h  mysql_connection.cpp  mysql_connection.h  mysql_packet.cpp  mysql_packet.h  mysql_query.cpp  mysql_query.h  mysql_socket.cpp  mysql_socket.h
core/tests/: CMakeLists.txt  test_binary_util.cpp  test_capi.cpp  test_cdc_engine.cpp  test_connection_validator.cpp  test_crc32.cpp  test_event_header.cpp  test_event_queue.cpp  test_gtid_encoder.cpp  test_helpers.h  test_logger.cpp  test_mariadb_event_parser.cpp  test_mariadb_gtid.cpp  test_mysql_auth.cpp  test_mysql_binlog_stream.cpp  test_mysql_packet.cpp  test_mysql_query.cpp  test_rotate_event.cpp  test_row_decoder.cpp  test_state_machine.cpp  test_table_map.cpp  test_transaction_gtid_tracker.cpp  test_types.cpp
core/tests/e2e/: CMakeLists.txt  test_e2e_auth.cpp  test_e2e_binlog_ddl.cpp  test_e2e_binlog_dml.cpp  test_e2e_buffer.cpp  test_e2e_engine.cpp  test_e2e_helpers.h  test_e2e_main.cpp  test_e2e_protocol.cpp  test_e2e_ssl.cpp
core/tests/fuzz/: fuzz_feed.cpp
core/tests/fuzz/corpus/: truncated_query_event
docs/releases/: README.md  v1.1.0.md  v1.3.2.md  v1.4.0.md  v1.5.0.md
e2e/: README.md  run-matrix.sh
e2e/docker/: docker-compose.mariadb.yml  docker-compose.yml
e2e/docker/certs/: ca-key.pem  ca.pem  client-cert.pem  client-key.pem  generate-certs.sh  server-cert.pem  server-key.pem  wrong-ca-key.pem  wrong-ca.pem
e2e/docker/mariadb-init/: 01-init.sql
e2e/docker/mysql-init/: 01-init.sql
