[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysql-event-stream"
version = "0.1.0"
description = "MySQL 8.4 CDC engine - Python binding (native ctypes)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []
authors = [{ name = "libraz" }]
readme = "README.md"
keywords = ["mysql", "cdc", "binlog", "replication", "change-data-capture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/libraz/mysql-event-stream"
Repository = "https://github.com/libraz/mysql-event-stream"
Issues = "https://github.com/libraz/mysql-event-stream/issues"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.2",
    "pymysql>=1.1",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.rye.scripts]
lint = "ruff check --fix ."
format = "ruff format ."
typecheck = "mypy src"
e2e = "pytest e2e/tests -v --timeout=120"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_event_stream"]
artifacts = ["src/mysql_event_stream/*.dylib", "src/mysql_event_stream/*.so", "src/mysql_event_stream/*.so.*"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "insert: INSERT event tests",
    "update: UPDATE event tests",
    "delete: DELETE event tests",
    "types: Column type tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
