[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mysql-event-stream"
version = "1.4.0"
description = "MySQL 8.4+ / MariaDB 10.11+ CDC engine - Python binding (native ctypes)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []
authors = [{ name = "libraz" }]
readme = "README.md"
keywords = ["mysql", "mariadb", "cdc", "binlog", "replication", "change-data-capture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "mypy>=2.3",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/libraz/mysql-event-stream"
Repository = "https://github.com/libraz/mysql-event-stream"
Issues = "https://github.com/libraz/mysql-event-stream/issues"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-timeout>=2.4",
    "pymysql>=1.2",
    "ruff>=0.15",
    "mypy>=2.3",
    "wheel>=0.47",
    "hatchling>=1.31",
    "cryptography>=49.0",
]

[tool.rye.scripts]
lint = "ruff check --fix ."
format = "ruff format ."
typecheck = "mypy src"
e2e = "pytest e2e/tests -v --timeout=120"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_event_stream"]
artifacts = ["src/mysql_event_stream/*.dylib", "src/mysql_event_stream/*.so", "src/mysql_event_stream/*.so.*"]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.cibuildwheel]
build = "cp311-*"
skip = "*-musllinux*"
test-requires = ["pytest>=8.0", "pytest-asyncio>=0.24"]
test-command = [
    "python -c \"from mysql_event_stream import CdcEngine; engine = CdcEngine(); engine.feed(b''); engine.close()\"",
    "pytest {project}/bindings/python/tests -x -q",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
before-all = "yum install -y perl-core make curl tar gzip && python3 -m pip install 'cmake>=3.20,<5' && bash {package}/../../.github/scripts/build-static-deps.sh /opt/mes-deps && MES_DEPS_PREFIX=/opt/mes-deps bash {package}/build_native.sh"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} && auditwheel show {dest_dir}/*.whl"

[tool.cibuildwheel.macos]
before-all = "bash {package}/../../.github/scripts/build-static-deps.sh /tmp/mes-deps-$MACOSX_DEPLOYMENT_TARGET && MES_DEPS_PREFIX=/tmp/mes-deps-$MACOSX_DEPLOYMENT_TARGET bash {package}/build_native.sh"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} && delocate-listdeps {dest_dir}/*.whl"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "insert: INSERT event tests",
    "update: UPDATE event tests",
    "delete: DELETE event tests",
    "streaming: live binlog streaming tests",
    "types: Column type tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
